--- a/climateapp/templates/weather/index.html
+++ b/climateapp/templates/weather/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>{{num}}</h1>
+    <h1>{{description}}</h1>
+    <h1>{{temp}}</h1>
+    <h1>{{day}}</h1>
+    <img src="https://api.openweathermap.org/img/w/{{icon}}.png" width="100px">
     
 </body>
 </html>
