--- a/climateapp/templates/weather/index.html
+++ b/climateapp/templates/weather/index.html
@@ -1,15 +1,24 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
+    <form method="POST">{%csrf_token%}
+        <input type="text" placeholder="Enter city" name="city">
+        <button type="submit">Enter</button>
+
+    </form>
     <h1>{{description}}</h1>
     <h1>{{temp}}</h1>
     <h1>{{day}}</h1>
+    <h1>{{city}}</h1>
     <img src="https://api.openweathermap.org/img/w/{{icon}}.png" width="100px">
     
 </body>
